--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          experience. </h2>
 
     <br id="info-spacing"/>
-    <h2 id="instructions">Click on every item you have completed. Data collected includes 
+    <h2 id="instructions"> on every item you have completed. Data collected includes 
       checkboxes and total score. This is so that we can post score distributions. 
     </h2>
     <ol id="list-of-impurity"></ol>
