--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <br id="info-spacing"/>
     <h2 id="instructions">Click on every item you have completed. Data collected includes 
-      checkboxes and total score,  that we can post score distributions. 
+      checkboxes and total score, so that we can post score distributions. 
     </h2>
     <ol id="list-of-impurity"></ol>
     <h3 id="score-label">Your score:</h3>
